err/mr.awsome.fabric.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/Fabric-1.14.0.egg-info'...
Listing './lib/python3.5/site-packages/PyNaCl-1.2.1.dist-info'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/bcrypt'...
Listing './lib/python3.5/site-packages/bcrypt-3.1.4.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/fabric'...
Compiling './lib/python3.5/site-packages/fabric/context_managers.py'...
***   File "./lib/python3.5/site-packages/fabric/context_managers.py", line 535
    def accept(channel, (src_addr, src_port), (dest_addr, dest_port)):
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fabric/contrib'...
Compiling './lib/python3.5/site-packages/fabric/network.py'...
***   File "./lib/python3.5/site-packages/fabric/network.py", line 25
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fabric/operations.py'...
***   File "./lib/python3.5/site-packages/fabric/operations.py", line 220
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fabric/sftp.py'...
***   File "./lib/python3.5/site-packages/fabric/sftp.py", line 85
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fabric/state.py'...
***   File "./lib/python3.5/site-packages/fabric/state.py", line 436
    except ssh.SSHException, err:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fabric/tasks.py'...
***   File "./lib/python3.5/site-packages/fabric/tasks.py", line 242
    except BaseException, e: # We really do want to capture everything
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fabric/thread_handling.py'...
***   File "./lib/python3.5/site-packages/fabric/thread_handling.py", line 25
    raise e[0], e[1], e[2]
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/lazy'...
Listing './lib/python3.5/site-packages/lazy/tests'...
Listing './lib/python3.5/site-packages/lazy-1.3.egg-info'...
Listing './lib/python3.5/site-packages/mr'...
Listing './lib/python3.5/site-packages/mr/awsome'...
Compiling './lib/python3.5/site-packages/mr/awsome/__init__.py'...
***   File "./lib/python3.5/site-packages/mr/awsome/__init__.py", line 268
    print startup_script['raw'],
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mr/awsome/tests'...
Compiling './lib/python3.5/site-packages/mr/awsome/tests/test_awsome.py'...
***   File "./lib/python3.5/site-packages/mr/awsome/tests/test_awsome.py", line 543
    print "get_masters called"
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mr/awsome/tests/test_common.py'...
***   File "./lib/python3.5/site-packages/mr/awsome/tests/test_common.py", line 187
    print q, repr(a)
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mr/awsome/tests/test_config.py'...
***   File "./lib/python3.5/site-packages/mr/awsome/tests/test_config.py", line 436
    print "Description of failed test:\n   ", description
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mr/awsome_fabric'...
Compiling './lib/python3.5/site-packages/mr/awsome_fabric/__init__.py'...
***   File "./lib/python3.5/site-packages/mr/awsome_fabric/__init__.py", line 133
    exec code in g, g
            ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/mr/awsome_fabric/fabric_integration.py'...
***   File "./lib/python3.5/site-packages/mr/awsome_fabric/fabric_integration.py", line 46
    except paramiko.SSHException, e:
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mr.awsome-1.0rc8.egg-info'...
Listing './lib/python3.5/site-packages/mr.awsome.fabric-1.0b3.egg-info'...
Listing './lib/python3.5/site-packages/nacl'...
Listing './lib/python3.5/site-packages/nacl/bindings'...
Listing './lib/python3.5/site-packages/nacl/pwhash'...
Listing './lib/python3.5/site-packages/paramiko'...
Listing './lib/python3.5/site-packages/paramiko-2.4.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1'...
Listing './lib/python3.5/site-packages/pyasn1/codec'...
Listing './lib/python3.5/site-packages/pyasn1/codec/ber'...
Listing './lib/python3.5/site-packages/pyasn1/codec/cer'...
Listing './lib/python3.5/site-packages/pyasn1/codec/der'...
Listing './lib/python3.5/site-packages/pyasn1/codec/native'...
Listing './lib/python3.5/site-packages/pyasn1/compat'...
Listing './lib/python3.5/site-packages/pyasn1/type'...
Listing './lib/python3.5/site-packages/pyasn1-0.4.2.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
